--- a/styles-conference/index.html
+++ b/styles-conference/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <h1>
+      <h1 id="headline">
         <a href="index.html">Styles Conference</a>
       </h1>
 
@@ -53,7 +53,7 @@
 
     </section>
 
-    <footer>
+    <footer class="footer">
       <nav>
         <a href="index.html">Home</a>
         <a href="speakers.html">Speakers</a>
