tables practice completed

--- a/practice/tables.html
+++ b/practice/tables.html
@@ -19,6 +19,9 @@
       /* td {
         background-color: orange;
       } */
+      td, th {
+        border: 1px solid gray;
+      }
       tbody tr:nth-child(2n+1) {
         background-color: orange;
       }
@@ -83,6 +86,59 @@
           <th scope="row">Kevin Wang</th>
           <td>Computer Science</td>
           <td>4.0</td>
+        </tr>
+      </tbody>
+    </table>
+
+    <table>
+      <thead>
+        <tr>
+          <th scope="col">Type</th>
+          <th scope="col">Name</th>
+          <th scope="col">Price</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <th scope="row" rowspan="3">Red</th>
+          <td>Meiomi Pinot Noir</td>
+          <td>$17.99</td>
+        </tr>
+        <tr>
+          <td>Radius Cabernet</td>
+          <td>$9.99</td>
+        </tr>
+        <tr>
+          <td>Apothic Red</td>
+          <td>$7.97</td>
+        </tr>
+
+        <tr>
+          <th scope="row" rowspan="3">White</th>
+          <td>Cloud Break Chardonnay</td>
+          <td>$8.99</td>
+        </tr>
+        <tr>
+          <td>Kendall Jackson Chardonnay</td>
+          <td>$9.97</td>
+        </tr>
+        <tr>
+          <td>Kim Crawford Sauvignon Blanc</td>
+          <td>$9.97</td>
+        </tr>
+
+        <tr>
+          <th scope="row" rowspan="3">Sake</th>
+          <td>Gekkeikan Sake</td>
+          <td>$9.99</td>
+        </tr>
+        <tr>
+          <td>Mura Mura Mountain Sake</td>
+          <td>$15.99</td>
+        </tr>
+        <tr>
+          <td>TY KU Sake Junmai Ginjo Black</td>
+          <td>$21.99</td>
         </tr>
       </tbody>
     </table>
